--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -4,43 +4,19 @@
 .body {
   position: relative;
   background-color: #f2ede7;
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Noto Serif", Helvetica;
   font-family: "Gabriela", Helvetica;
 }
 
-.mid-fidelity .overlap {
-  position: absolute;
-  width: 1406px;
-  height: 1116px;
-  top: 1px;
-  left: 322px;
-  background-color: #f2ede7;
-}
-
-.mid-fidelity .text-wrapper {
-  position: absolute;
-  width: 333px;
-  height: 58px;
-  top: 7px;
-  left: 26px;
-  font-family: "Noto Serif", Helvetica;
-  font-weight: 700;
-  color: #000000;
-  font-size: 40px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: 69px;
-  white-space: nowrap;
-}
-
 .profile-image {
   position: absolute;
   width: 350px;
   height: 727px;
-  top: 117px;
-  left: 43px;
+  top: 90px;
   background-color: #f8d6a4;
   border: 2.5px solid;
   border-color: #1d1d1b;
@@ -59,7 +35,7 @@
   background-color: #f2ede7;
 }
 
-.mid-fidelity .sample-image {
+.sample-image {
   position: absolute;
   width: 58px;
   height: 63px;
@@ -67,7 +43,7 @@
   left: 56px;
 }
 
-.mid-fidelity .div {
+.div {
   position: absolute;
   width: 100%;
   height: 40px;
@@ -82,7 +58,7 @@
   white-space: nowrap;
 }
 
-.mid-fidelity .upload-group {
+.upload-group {
   position: absolute;
   width: 183px;
   height: 52px;
@@ -95,7 +71,7 @@
   width: 181px;
   height: 52px;
   background-color: #f2ede7;
-  border: 1px solid;
+  border: 2px solid;
   border-color: #000000;
   display: flex;
   flex-direction: column;
@@ -106,7 +82,7 @@ input[type="file"] {
   display: none;
 }
 
-.mid-fidelity .text-wrapper-2 {
+.text-wrapper-2 {
   font-family: "Noto Serif", Helvetica;
   font-weight: 500;
   color: #000000;
@@ -116,7 +92,7 @@ input[type="file"] {
   line-height: 22.4px;
 }
 
-.mid-fidelity .text-wrapper-3 {
+.remove-btn {
   position: absolute;
   width: 127px;
   height: 28px;
@@ -130,7 +106,7 @@ input[type="file"] {
   line-height: 22.4px;
 }
 
-.mid-fidelity .line {
+.divide-line {
   position: absolute;
   width: 231px;
   height: 1px;
@@ -138,7 +114,7 @@ input[type="file"] {
   object-fit: cover;
 }
 
-.mid-fidelity .text-wrapper-4 {
+.requirements {
   position: absolute;
   width: 166px;
   height: 23px;
@@ -152,7 +128,7 @@ input[type="file"] {
   white-space: nowrap;
 }
 
-.mid-fidelity .min-px-px {
+.min-px-px {
   position: absolute;
   width: 118px;
   top: 466px;
@@ -165,18 +141,18 @@ input[type="file"] {
   text-align: left;
 }
 
-.mid-fidelity .profile-information {
+.profile-information {
   position: absolute;
   width: 933px;
   height: 727px;
-  top: 117px;
-  left: 420px;
+  top: 90px;
+  left: 370px;
   background-color: #f8d6a4;
   border: 2.5px solid;
   border-color: #1d1d1b;
 }
 
-.mid-fidelity .group-2 {
+.group-2 {
   position: absolute;
   width: 394px;
   height: 85px;
@@ -184,7 +160,7 @@ input[type="file"] {
   left: 60px;
 }
 
-.mid-fidelity .div-2 {
+.div-2 {
   position: absolute;
   width: 392px;
   height: 52px;
@@ -231,7 +207,7 @@ input[type="file"] {
   color: #00000099;
 }
 
-.mid-fidelity .text-wrapper-5 {
+.text-wrapper-5 {
   display: flex;
   font-family: "Noto Serif", Helvetica;
   font-weight: 500;
@@ -242,7 +218,7 @@ input[type="file"] {
   white-space: nowrap;
 }
 
-.mid-fidelity .group-3 {
+.group-3 {
   position: absolute;
   width: 799px;
   height: 85px;
@@ -250,7 +226,7 @@ input[type="file"] {
   left: 60px;
 }
 
-.mid-fidelity .div-3 {
+.div-3 {
   width: 797px;
   position: absolute;
   height: 52px;
@@ -262,7 +238,7 @@ input[type="file"] {
   border-color: #ababab;
 }
 
-.mid-fidelity .text-wrapper-6 {
+.fieldName-long {
   display: flex;
   font-family: "Noto Serif", Helvetica;
   font-weight: 500;
@@ -273,7 +249,7 @@ input[type="file"] {
   white-space: nowrap;
 }
 
-.mid-fidelity .group-4 {
+.group-4 {
   position: absolute;
   width: 799px;
   height: 85px;
@@ -281,7 +257,7 @@ input[type="file"] {
   left: 60px;
 }
 
-.mid-fidelity .group-5 {
+.group-5 {
   position: absolute;
   width: 394px;
   height: 85px;
@@ -289,7 +265,7 @@ input[type="file"] {
   left: 60px;
 }
 
-.mid-fidelity .icon-bootstrap {
+.icon-bootstrap {
   position: absolute;
   width: 18px;
   height: 16px;
@@ -297,7 +273,7 @@ input[type="file"] {
   left: 365px;
 }
 
-.mid-fidelity .group-6 {
+.group-6 {
   position: absolute;
   width: 394px;
   height: 85px;
@@ -305,7 +281,7 @@ input[type="file"] {
   left: 464px;
 }
 
-.mid-fidelity .group-7 {
+.group-7 {
   position: absolute;
   width: 799px;
   height: 85px;
@@ -326,7 +302,7 @@ input[type="file"] {
   padding: 8.49px 0px;
   position: relative;
   width: 181px;
-  top: 846px;
+  top: 821px;
   left: 1173px;
   cursor: pointer;
   font-family: "Noto Serif", Helvetica;
@@ -334,7 +310,7 @@ input[type="file"] {
   font-weight: 600;
 }
 
-.mid-fidelity .polygon {
+.polygon {
   position: absolute;
   width: 15px;
   height: 8px;
@@ -342,7 +318,7 @@ input[type="file"] {
   left: 773px;
 }
 
-.mid-fidelity .group-8 {
+.group-8 {
   position: absolute;
   width: 394px;
   height: 85px;
@@ -364,7 +340,7 @@ input[type="file"] {
   border-color: var(--default-success);
 }
 
-.mid-fidelity .top {
+.top {
   display: flex;
   align-items: flex-start;
   gap: 16px;
@@ -374,7 +350,7 @@ input[type="file"] {
   flex: 0 0 auto;
 }
 
-.mid-fidelity .icon {
+.icon {
   display: inline-flex;
   height: 48px;
   align-items: center;
@@ -384,13 +360,13 @@ input[type="file"] {
   flex: 0 0 auto;
 }
 
-.mid-fidelity .icon-jam-icons {
+.icon-jam-icons {
   position: relative;
   width: 24px;
   height: 24px;
 }
 
-.mid-fidelity .content {
+.content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -400,7 +376,7 @@ input[type="file"] {
   flex-grow: 1;
 }
 
-.mid-fidelity .title-subtitle {
+.title-subtitle {
   display: flex;
   align-items: center;
   gap: 4px;
@@ -410,7 +386,7 @@ input[type="file"] {
   flex: 0 0 auto;
 }
 
-.mid-fidelity .title {
+.title {
   position: relative;
   width: fit-content;
   font-family: "Noto Serif", Helvetica;
@@ -423,7 +399,7 @@ input[type="file"] {
   align-self: start;
 }
 
-.mid-fidelity .subtitle {
+.subtitle {
   position: relative;
   flex: 1;
   margin-top: -1px;
@@ -435,7 +411,7 @@ input[type="file"] {
   line-height: 19.6px;
 }
 
-.mid-fidelity .right {
+.right {
   display: inline-flex;
   height: 48px;
   align-items: center;
@@ -443,7 +419,7 @@ input[type="file"] {
   flex: 0 0 auto;
 }
 
-.mid-fidelity .close {
+.close {
   display: flex;
   width: 48px;
   height: 48px;
@@ -453,7 +429,7 @@ input[type="file"] {
   position: relative;
 }
 
-.mid-fidelity .sidebar {
+.sidebar {
   position: absolute;
   width: 322px;
   height: 1117px;
@@ -462,13 +438,13 @@ input[type="file"] {
   background-color: #f8d6a4;
 }
 
-.mid-fidelity .overlap-2 {
+.overlap-2 {
   position: relative;
   height: 1117px;
   background-color: #f8d6a4;
 }
 
-.mid-fidelity .signout {
+.signout {
   position: absolute;
   width: 169px;
   height: 28px;
@@ -476,7 +452,7 @@ input[type="file"] {
   left: 49px;
 }
 
-.mid-fidelity .signout-text {
+.signout-text {
   position: absolute;
   width: 142px;
   height: 28px;
@@ -484,7 +460,7 @@ input[type="file"] {
   left: 29px;
 }
 
-.mid-fidelity .text-wrapper-7 {
+.text-wrapper-7 {
   position: absolute;
   width: 140px;
   height: 28px;
@@ -499,7 +475,7 @@ input[type="file"] {
   text-decoration: underline;
 }
 
-.mid-fidelity .signout-icon {
+.signout-icon {
   position: absolute;
   width: 19px;
   height: 21px;
@@ -507,7 +483,7 @@ input[type="file"] {
   left: -1px;
 }
 
-.mid-fidelity .profile-settings {
+.profile-settings {
   width: 164px;
   top: 487px;
   left: 31px;
@@ -515,7 +491,7 @@ input[type="file"] {
   height: 28px;
 }
 
-.mid-fidelity .text-wrapper-8 {
+.text-wrapper-8 {
   width: 140px;
   top: 0;
   left: 22px;
@@ -530,7 +506,7 @@ input[type="file"] {
   height: 28px;
 }
 
-.mid-fidelity .settings-icon {
+.settings-icon {
   position: absolute;
   width: 19px;
   height: 19px;
@@ -538,15 +514,7 @@ input[type="file"] {
   left: 0;
 }
 
-.mid-fidelity .bookmarks {
-  position: absolute;
-  width: 135px;
-  height: 28px;
-  top: 429px;
-  left: 28px;
-}
-
-.mid-fidelity .bookmark-icon {
+.bookmark-icon {
   position: absolute;
   width: 23px;
   height: 22px;
@@ -554,7 +522,7 @@ input[type="file"] {
   left: 0;
 }
 
-.mid-fidelity .text-wrapper-9 {
+.text-wrapper-9 {
   position: absolute;
   width: 110px;
   height: 28px;
@@ -569,7 +537,7 @@ input[type="file"] {
   line-height: normal;
 }
 
-.mid-fidelity .quotes {
+.quotes {
   position: absolute;
   width: 97px;
   height: 28px;
@@ -577,13 +545,13 @@ input[type="file"] {
   left: 29px;
 }
 
-.mid-fidelity .overlap-group-2 {
+.overlap-group-2 {
   position: relative;
   width: 95px;
   height: 28px;
 }
 
-.mid-fidelity .text-wrapper-10 {
+.text-wrapper-10 {
   position: absolute;
   width: 73px;
   height: 28px;
@@ -598,7 +566,7 @@ input[type="file"] {
   line-height: normal;
 }
 
-.mid-fidelity .scroll-icon {
+.scroll-icon {
   position: absolute;
   width: 23px;
   height: 20px;
@@ -606,7 +574,7 @@ input[type="file"] {
   left: 0;
 }
 
-.mid-fidelity .althea {
+.althea {
   position: absolute;
   width: 93px;
   height: 28px;
@@ -614,13 +582,13 @@ input[type="file"] {
   left: 31px;
 }
 
-.mid-fidelity .overlap-3 {
+.overlap-3 {
   position: relative;
   width: 91px;
   height: 28px;
 }
 
-.mid-fidelity .text-wrapper-11 {
+.text-wrapper-11 {
   position: absolute;
   width: 73px;
   height: 28px;
@@ -635,7 +603,7 @@ input[type="file"] {
   line-height: normal;
 }
 
-.mid-fidelity .crystall-ball-icon {
+.crystall-ball-icon {
   position: absolute;
   width: 19px;
   height: 20px;
@@ -643,7 +611,7 @@ input[type="file"] {
   left: 0;
 }
 
-.mid-fidelity .search {
+.search {
   position: absolute;
   width: 291px;
   height: 53px;
@@ -651,7 +619,7 @@ input[type="file"] {
   left: 16px;
 }
 
-.mid-fidelity .overlap-4 {
+.overlap-4 {
   position: relative;
   width: 289px;
   height: 53px;
@@ -660,7 +628,7 @@ input[type="file"] {
   border-color: #000000;
 }
 
-.mid-fidelity .search-for {
+.search-for {
   width: 105px;
   height: 20px;
   left: 48px;
@@ -678,7 +646,7 @@ input[type="file"] {
   padding: 0;
 }
 
-.mid-fidelity .search-icon {
+.search-icon {
   width: 22px;
   height: 21px;
   left: 22px;
@@ -686,7 +654,7 @@ input[type="file"] {
   top: 16px;
 }
 
-.mid-fidelity .profile-group {
+.profile-group {
   position: absolute;
   width: 144px;
   height: 59px;
@@ -694,7 +662,7 @@ input[type="file"] {
   left: 82px;
 }
 
-.mid-fidelity .notification-icon {
+.notification-icon {
   position: absolute;
   width: 27px;
   height: 27px;
@@ -702,7 +670,7 @@ input[type="file"] {
   left: 117px;
 }
 
-.mid-fidelity .user-icon-wrapper {
+.user-icon-wrapper {
   position: absolute;
   width: 58px;
   height: 59px;
@@ -712,7 +680,7 @@ input[type="file"] {
   border-radius: 29px/29.5px;
 }
 
-.mid-fidelity .user-icon {
+.user-icon {
   position: absolute;
   width: 20px;
   height: 22px;
@@ -720,7 +688,7 @@ input[type="file"] {
   left: 19px;
 }
 
-.mid-fidelity .img {
+.img {
   position: absolute;
   width: 28px;
   height: 28px;
@@ -728,7 +696,7 @@ input[type="file"] {
   left: 72px;
 }
 
-.mid-fidelity .logo {
+.logo {
   position: absolute;
   width: 263px;
   height: 51px;
@@ -736,7 +704,7 @@ input[type="file"] {
   left: 35px;
 }
 
-.mid-fidelity .text-wrapper-12 {
+.text-wrapper-12 {
   position: absolute;
   width: 210px;
   height: 49px;
@@ -751,7 +719,7 @@ input[type="file"] {
   line-height: normal;
 }
 
-.mid-fidelity .overlap-group-wrapper {
+.overlap-group-wrapper {
   position: absolute;
   width: 42px;
   height: 51px;
@@ -759,7 +727,7 @@ input[type="file"] {
   left: 0;
 }
 
-.mid-fidelity .overlap-group-3 {
+.overlap-group-3 {
   position: relative;
   height: 51px;
 }
