--- a/src/css/settings.css
+++ b/src/css/settings.css
@@ -19,7 +19,7 @@
   width: 70%;
   height: 100%;
   top: 1px;
-  left: 306px;
+  left: 330px;
 }
 
 .page-title {
@@ -170,12 +170,405 @@ input[type="file"] {
 .profile-information {
   position: absolute;
   width: 933px;
-  height: 727px;
+  height: 630px;
   top: 90px;
-  left: 370px;
+  left: 310px;
   background-color: #f8d6a4;
   border: 2.5px solid;
   border-color: #1d1d1b;
+}
+@import url("https://fonts.googleapis.com/css?family=Noto Serif");
+@import url("https://fonts.googleapis.com/css?family=Gabriela");
+
+.body {
+  position: relative;
+  background-color: #f2ede7;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Serif", Helvetica;
+  font-family: "Gabriela", Helvetica;
+}
+
+.page-group {
+  position: absolute;
+  /* width: 1406px;
+    height: 1116px; */
+  width: 70%;
+  height: 100%;
+  top: 1px;
+  left: 306px;
+}
+
+.page-title {
+  position: absolute;
+  width: 297px;
+  height: 58px;
+  top: 7px;
+  left: 9px;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 700;
+  color: #000000;
+  font-size: 40px;
+  text-align: start;
+  letter-spacing: 0;
+  line-height: 69px;
+  white-space: nowrap;
+}
+
+.profile-image {
+  position: absolute;
+  width: 290px;
+  height: 630px;
+  top: 90px;
+  background-color: #f8d6a4;
+  border: 2.5px solid;
+  border-color: #1d1d1b;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-container {
+  position: absolute;
+  width: 172px;
+  height: 170px;
+  top: 42px;
+  border-radius: 86px/85px;
+  margin: 0;
+  background-color: #f2ede7;
+}
+
+.sample-image {
+  position: absolute;
+  width: 58px;
+  height: 63px;
+  top: 52px;
+  left: 56px;
+}
+
+.div {
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  top: 227px;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 500;
+  color: #1d1d1b;
+  font-size: 24px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 33.6px;
+  white-space: nowrap;
+}
+
+.upload-group {
+  position: absolute;
+  width: 183px;
+  height: 52px;
+  top: 284px;
+  cursor: pointer;
+}
+
+.overlap-group {
+  position: relative;
+  width: 181px;
+  height: 52px;
+  background-color: #f2ede7;
+  border: 2px solid;
+  border-color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.text-wrapper-2 {
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 500;
+  color: #000000;
+  font-size: 16px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 22.4px;
+}
+
+.remove-btn {
+  position: absolute;
+  width: 127px;
+  height: 28px;
+  top: 344px;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 500;
+  color: #000000;
+  font-size: 16px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 22.4px;
+}
+
+.divide-line {
+  position: absolute;
+  width: 231px;
+  height: 1px;
+  top: 422px;
+  object-fit: cover;
+}
+
+.requirements {
+  position: absolute;
+  width: 166px;
+  height: 23px;
+  top: 434px;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 500;
+  color: #000000;
+  font-size: 16px;
+  letter-spacing: 0;
+  line-height: 22.4px;
+  white-space: nowrap;
+}
+
+.min-px-px {
+  position: absolute;
+  width: 118px;
+  top: 466px;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 10px;
+  letter-spacing: -0.05px;
+  line-height: 12.4px;
+  text-align: left;
+}
+
+.profile-information {
+  position: absolute;
+  width: 933px;
+  height: 630px;
+  top: 90px;
+  left: 310px;
+  background-color: #f8d6a4;
+  border: 2.5px solid;
+  border-color: #1d1d1b;
+}
+
+.group-2 {
+  position: absolute;
+  width: 394px;
+  height: 85px;
+  top: 40px;
+  left: 60px;
+}
+
+.div-2 {
+  position: absolute;
+  width: 392px;
+  height: 52px;
+  top: 33px;
+  left: 0;
+  background-color: #f2ede7;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-color: #ababab;
+}
+
+.form-control {
+  background-color: transparent;
+  border: none;
+  height: 52px;
+  line-height: 22.4px;
+  padding-left: 5px;
+  font-family: "Noto Serif", Helvetica;
+  font-size: 16px;
+  outline: none;
+}
+
+.pshort {
+  width: 392px;
+}
+
+.plong {
+  width: 797px;
+}
+
+.password {
+  width: 350px;
+}
+
+.dropdown-select {
+  appearance: none;
+  background-image: url("triangle.svg"); /* Path to your triangle icon */
+  background-repeat: no-repeat;
+  background-position: right 10px center; /* Adjust as necessary */
+  padding-right: 30px;
+}
+
+.form-control::form-control {
+  color: #00000099;
+}
+
+.text-wrapper-5 {
+  display: flex;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 500;
+  color: #1d1d1b;
+  font-size: 16px;
+  letter-spacing: 0;
+  line-height: 22.4px;
+  white-space: nowrap;
+}
+
+.group-3 {
+  position: absolute;
+  width: 799px;
+  height: 85px;
+  top: 146px;
+  left: 60px;
+}
+
+.div-3 {
+  width: 797px;
+  position: absolute;
+  height: 52px;
+  top: 33px;
+  left: 0;
+  background-color: #f2ede7;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-color: #ababab;
+}
+
+.fieldName-long {
+  display: flex;
+  font-family: "Noto Serif", Helvetica;
+  font-weight: 500;
+  color: #1d1d1b;
+  font-size: 16px;
+  letter-spacing: 0;
+  line-height: 22.4px;
+  white-space: nowrap;
+}
+
+.group-4 {
+  position: absolute;
+  width: 799px;
+  height: 85px;
+  top: 254px;
+  left: 60px;
+}
+
+.group-5 {
+  position: absolute;
+  width: 394px;
+  height: 85px;
+  top: 360px;
+  left: 60px;
+}
+
+.icon-bootstrap {
+  position: absolute;
+  width: 18px;
+  height: 16px;
+  top: 17px;
+  left: 365px;
+}
+
+.group-6 {
+  position: absolute;
+  width: 394px;
+  height: 85px;
+  top: 360px;
+  left: 464px;
+}
+
+.group-7 {
+  position: absolute;
+  width: 799px;
+  height: 85px;
+  top: 468px;
+  left: 60px;
+}
+
+.submitButton {
+  align-items: center;
+  background-color: #f2ede7;
+  border: 2.5px solid;
+  border-color: #000000;
+  display: flex;
+  flex-direction: column;
+  height: 52px;
+  margin-right: 53px;
+  margin-top: 11px;
+  padding: 8.49px 0px;
+  position: relative;
+  width: 181px;
+  top: 721px;
+  left: 1059px;
+  cursor: pointer;
+  font-family: "Noto Serif", Helvetica;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.polygon {
+  position: absolute;
+  width: 15px;
+  height: 8px;
+  top: 23px;
+  left: 773px;
+}
+
+.group-8 {
+  position: absolute;
+  width: 394px;
+  height: 85px;
+  top: 40px;
+  left: 464px;
+}
+
+.notification {
+  display: flex;
+  flex-direction: column;
+  width: 1295px;
+  align-items: flex-start;
+  padding: 0px 0px 0px 16px;
+  position: absolute;
+  top: 895px;
+  background-color: #25a2491a;
+  border-left-width: 3px;
+  border-left-style: solid;
+  border-color: var(--default-success);
+}
+
+.top {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+  position: relative;
+  align-self: stretch;
+  width: 100%;
+  flex: 0 0 auto;
+}
+
+.icon {
+  display: inline-flex;
+  height: 48px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  position: relative;
+  flex: 0 0 auto;
+}
+
+.icon-jam-icons {
+  position: relative;
+  width: 24px;
+  height: 24px;
 }
 
 .group-2 {
